--- a/Arbres.html
+++ b/Arbres.html
@@ -102,7 +102,7 @@
                     tant que la pile n'est pas vide :<br/>
                     &nbsp;&nbsp;&nbsp;&nbsp;dépiler un nœud<br/>
                     &nbsp;&nbsp;&nbsp;&nbsp;réaliser le traitement voulu sur ce nœud<br/>
-                    &nbsp;&nbsp;&nbsp;&nbsp;empiler le fils gauche et le fils droit de ce nœud à la pile<br/>
+                    &nbsp;&nbsp;&nbsp;&nbsp;empiler le fils droit et le fils gauche de ce nœud à la pile<br/>
                 </p>
             </div>
             Cependant, lors du parcours en profondeur, on peut choisir de traiter un nœud :
