--- a/Arbres.html
+++ b/Arbres.html
@@ -114,9 +114,9 @@
             <div class='exercice'>
                 <ol>
                     <li>En réalisant un parcours en profondeur grâce à une pile comme vue ci-dessus, quel type de parcours réalise-t-on ?</li>
-                    <li>En réalisant un parcours en profondeur préfixe du graphe suivant, quel est l'ordre de traitement des sommets ?</li>
-                    <li>En réalisant un parcours en profondeur postfixe du graphe suivant, quel est l'ordre de traitement des sommets ?</li>
-                    <li>En réalisant un parcours en profondeur infixe du graphe suivant, quel est l'ordre de traitement des sommets ?</li>
+                    <li>En réalisant un parcours en profondeur préfixe du graphe suivant, quel est l'ordre de traitement des nœuds ?</li>
+                    <li>En réalisant un parcours en profondeur postfixe du graphe suivant, quel est l'ordre de traitement des nœuds ?</li>
+                    <li>En réalisant un parcours en profondeur infixe du graphe suivant, quel est l'ordre de traitement des nœuds ?</li>
                 </ol>
                 <img src='images/exo2.png'>
             </div>
@@ -297,17 +297,17 @@
                         <img src='images/exo4.png'>
                     </li>
                     <li>
-                        Ecrire une fonction <mark class='code'>parcours_largeur(arbre, f)</mark> appliquant la fonction <mark class='code'>f</mark> à l'ensemble des nœuds de l'arbre selon un parcours en largeur.
-                        On pourra tester cette fonction en appliquant la fonction <mark class="code">print</mark> à l'arbre <mark class='code'>A</mark>.
+                        Ajouter une méthode <mark class='code'>parcours_largeur(f)</mark> appliquant la fonction <mark class='code'>f</mark> à l'ensemble des nœuds de l'arbre selon un parcours en largeur.
+                        On pourra tester cette méthode en appliquant la fonction <mark class="code">print</mark> à l'arbre <mark class='code'>A</mark>.
                     </li>
                     <li>
-                        Ecrire une fonction <mark class='code'>parcours_prefixe(arbre, f)</mark> appliquant la fonction <mark class='code'>f</mark> à l'ensemble des nœuds de l'arbre selon un parcours en profondeur prefixe.
+                        Ajouter une méthode <mark class='code'>parcours_prefixe(f)</mark> appliquant la fonction <mark class='code'>f</mark> à l'ensemble des nœuds de l'arbre selon un parcours en profondeur prefixe.
                     </li>
                     <li>
-                        Ecrire une fonction <mark class='code'>parcours_infixe(arbre, f)</mark> appliquant la fonction <mark class='code'>f</mark> à l'ensemble des nœuds de l'arbre selon un parcours en profondeur infixe.
+                        Ajouter une méthode <mark class='code'>parcours_infixe(f)</mark> appliquant la fonction <mark class='code'>f</mark> à l'ensemble des nœuds de l'arbre selon un parcours en profondeur infixe.
                     </li>
                     <li>
-                        Ecrire une fonction <mark class='code'>parcours_postfixe(arbre, f)</mark> appliquant la fonction <mark class='code'>f</mark> à l'ensemble des nœuds de l'arbre selon un parcours en profondeur postfixe.
+                        Ajouter une méthode <mark class='code'>parcours_postfixe(f)</mark> appliquant la fonction <mark class='code'>f</mark> à l'ensemble des nœuds de l'arbre selon un parcours en profondeur postfixe.
                     </li>
                 </ol>
             </div>
