--- a/Tuples.html
+++ b/Tuples.html
@@ -153,7 +153,7 @@
             <div class="algo">
                 <input type="button" class="copier" value="📑" title="copier">
                 <p class="code">
-                    ego = ("moi,")<br/>
+                    ego = ("moi",)<br/>
                     r = (12,)
                 </p>
             </div>
