--- a/Tuples.html
+++ b/Tuples.html
@@ -211,7 +211,7 @@
                     <li>Ecrire une fonction <mark class='code'>chercher_nom(repertoire, numero)</mark> qui retourne le nom associé au <mark class='code'>numero</mark> dans le <mark class='code'>repertoire</mark>.</li>
                     <li>Modifier la fonction <mark class='code'>ajouter_numero</mark> pour qu'elle refuse d'ajouter une association si le <mark class='code'>numero</mark> ou le <mark class='code'>nom</mark> est déjà présent dans le <mark class='code'>repertoire</mark>.</li>
                     <li>Ecrire une fonction <mark class='code'>supprimer_numero(repertoire, nom)</mark> qui supprime le contact associé au <mark class='code'>nom</mark> dans le <mark class='code'>repertoire</mark>.</li>
-                    <li>Ecrire une fonction <mark class='code'>modifier_numero(repertoire, nom, numero)</mark> qui modifie le <mark class="code">numero</mark> associé au <mark class='code'>nom</mark> dans le <mark class='code'>repertoire</mark>.</li>
+                    <li>Ecrire une fonction <br/><mark class='code'>modifier_numero(repertoire, nom, nouveau_numero)</mark><br/> qui modifie le numero associé au <mark class='code'>nom</mark> dans le <mark class='code'>repertoire</mark>.</li>
                 </ol>
                 Ces fonctions peuvent s'utiliser facilement. Exemple :
                 <div class="algo">
