--- a/Arbres.html
+++ b/Arbres.html
@@ -93,7 +93,6 @@
             En remplaçant la file par une pile, on explore l'arbre branche par branche.
             On parle alors de parcours en profondeur.
             <img src='images/p_profondeur.png'>
-            Il est très facile de parcourir un arbre en largeur grâce à une file :
             <div class="algo">
                 <input type="button" class="copier" value="📑" title="copier">
                 <p class="code">
@@ -293,24 +292,25 @@
                         </ul>
                     </li>
                     <li>
-                        Utiliser cette classe pour enregistrer l'arbre suivant dans une variable <mark class='code'>A</mark>
+                        Utiliser cette classe pour enregistrer l'arbre suivant dans une variable <mark class='code'>A</mark>.
                         <img src='images/exo4.png'>
                     </li>
                     <li>
-                        Ajouter une méthode <mark class='code'>parcours_largeur(f)</mark> appliquant la fonction <mark class='code'>f</mark> à l'ensemble des nœuds de l'arbre selon un parcours en largeur.
-                        On pourra tester cette méthode en appliquant la fonction <mark class="code">print</mark> à l'arbre <mark class='code'>A</mark>.
+                        Ajouter une méthode <mark class='code'>parcours_largeur()</mark> affichant la valeur des nœuds de l'arbre selon un parcours en largeur.
                     </li>
                     <li>
-                        Ajouter une méthode <mark class='code'>parcours_prefixe(f)</mark> appliquant la fonction <mark class='code'>f</mark> à l'ensemble des nœuds de l'arbre selon un parcours en profondeur prefixe.
+                        Ajouter une méthode <mark class='code'>parcours_prefixe()</mark> affichant la valeur des nœuds de l'arbre selon un parcours en profondeur prefixe.
                     </li>
                     <li>
-                        Ajouter une méthode <mark class='code'>parcours_infixe(f)</mark> appliquant la fonction <mark class='code'>f</mark> à l'ensemble des nœuds de l'arbre selon un parcours en profondeur infixe.
+                        Ajouter une méthode <mark class='code'>parcours_infixe()</mark> affichant la valeur des nœuds de l'arbre selon un parcours en profondeur infixe.
                     </li>
                     <li>
-                        Ajouter une méthode <mark class='code'>parcours_postfixe(f)</mark> appliquant la fonction <mark class='code'>f</mark> à l'ensemble des nœuds de l'arbre selon un parcours en profondeur postfixe.
+                        Ajouter une méthode <mark class='code'>parcours_postfixe()</mark> affichant la valeur des nœuds de l'arbre selon un parcours en profondeur postfixe.
                     </li>
                 </ol>
             </div>
+            <h2>Premières applications</h2>
+            <h3>Code Morse</h3>
             <h2>Arbre binaire de recherche</h2>
         </div>
         <script type="text/javascript" src="script.js"></script>
